[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/HUD/ItemSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/HUD/ItemSlot/ItemUp.png" type="Texture" id=2]
[ext_resource path="res://Assets/HUD/ItemSlot/ItemDown.png" type="Texture" id=3]
[ext_resource path="res://Scenes/HUD/ChlimItemSlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD/Ingame_HUD.gd" type="Script" id=5]
[ext_resource path="res://Assets/HUD/Piments/Selection_piment_fire.png" type="Texture" id=6]
[ext_resource path="res://Assets/HUD/Piments/Selection_piment_wind_not_choose.png" type="Texture" id=7]
[ext_resource path="res://Assets/HUD/Piments/Selection_piment_unknwn.png" type="Texture" id=8]
[ext_resource path="res://Assets/HUD/Piments/Selection_pepper_off.png" type="Texture" id=9]
[ext_resource path="res://Assets/HUD/Piments/Selection_piment_wind.png" type="Texture" id=11]
[ext_resource path="res://Assets/HUD/Piments/Selection_piment_fire_not_choose.png" type="Texture" id=12]
[ext_resource path="res://Assets/HUD/PXUI-Basic/panel_Example1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Assets/HUD/PXUI-Basic/panel_Example4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Fonts/Roboto-Black.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Assets/Objects/Icon3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Objects/Icon2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Objects/Icon1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Objects/Icon5.png" type="Texture" id=21]
[ext_resource path="res://Assets/Objects/Icon4.png" type="Texture" id=22]
[ext_resource path="res://Assets/HUD/Piments/Selection_pepper_on.png" type="Texture" id=23]
[ext_resource path="res://Assets/HUD/Piments/Selection_anise_off.png" type="Texture" id=24]
[ext_resource path="res://Assets/HUD/Piments/Selection_anise_on.png" type="Texture" id=25]
[ext_resource path="res://Assets/HUD/Piments/Selection_paprika_off.png" type="Texture" id=26]
[ext_resource path="res://Assets/HUD/Piments/Selection_paprika_on.png" type="Texture" id=27]
[ext_resource path="res://Assets/HUD/Piments/selection_encens_not_discovered.png" type="Texture" id=28]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=2]
resource_name = "ItemReceived"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("ObjectReceived:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ObjectReceived:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "TutorialShow"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("Tutorial/RichTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 13, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tutorial:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 14.9, 15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 16 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ItemSlotContainer" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.008
anchor_top = 0.012
anchor_right = 0.129
anchor_bottom = 0.169
margin_left = -0.192
margin_top = 0.32
margin_right = -0.0960083
margin_bottom = -0.160011

[node name="TextureRect" parent="ItemSlotContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 90.0
margin_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="ItemSlotContainer"]
margin_left = 94.0
margin_right = 124.0
margin_bottom = 99.0
alignment = 1

[node name="btn_upselection" type="TextureButton" parent="ItemSlotContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 30.0
margin_bottom = 47.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="btn_downselection" type="TextureButton" parent="ItemSlotContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 30.0
margin_bottom = 83.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -96.0
margin_right = 512.0
alignment = 1

[node name="Feu" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_right = 361.0
margin_bottom = 96.0
NotActive = ExtResource( 12 )
Active = ExtResource( 6 )
NotDiscovered = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Feu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 32.0
texture = ExtResource( 20 )

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 365.0
margin_right = 365.0
margin_bottom = 96.0

[node name="Vent" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 369.0
margin_right = 459.0
margin_bottom = 96.0
NotActive = ExtResource( 7 )
Active = ExtResource( 11 )
NotDiscovered = ExtResource( 8 )
piments_id = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Vent"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 32.0
texture = ExtResource( 19 )

[node name="HSplitContainer2" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 463.0
margin_right = 463.0
margin_bottom = 96.0

[node name="Inverse" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 467.0
margin_right = 557.0
margin_bottom = 96.0
NotActive = ExtResource( 9 )
Active = ExtResource( 23 )
NotDiscovered = ExtResource( 28 )
piments_id = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Inverse"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 32.0
texture = ExtResource( 18 )

[node name="HSplitContainer4" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 561.0
margin_right = 561.0
margin_bottom = 96.0

[node name="Glace" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 565.0
margin_right = 655.0
margin_bottom = 96.0
NotActive = ExtResource( 24 )
Active = ExtResource( 25 )
NotDiscovered = ExtResource( 28 )
piments_id = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Glace"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 32.0
texture = ExtResource( 22 )

[node name="HSplitContainer5" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 659.0
margin_right = 659.0
margin_bottom = 96.0

[node name="Propagation" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 663.0
margin_right = 753.0
margin_bottom = 96.0
NotActive = ExtResource( 26 )
Active = ExtResource( 27 )
NotDiscovered = ExtResource( 28 )
piments_id = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Propagation"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 32.0
texture = ExtResource( 21 )

[node name="ObjectReceived" type="TextureRect" parent="."]
visible = false
anchor_right = 0.439
anchor_bottom = 0.234
margin_right = 0.463989
margin_bottom = 0.23999
rect_scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="ObjectReceived"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.729412, 0.203922, 0.203922, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fire Pepper Received"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ItemReceived = SubResource( 2 )
anims/TutorialShow = SubResource( 4 )

[node name="Tutorial" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_right = 225.0
margin_bottom = 150.0
texture = ExtResource( 15 )

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial"]
anchor_left = 0.082
anchor_top = 0.233
anchor_right = 0.922
anchor_bottom = 0.78
margin_left = 0.0999985
margin_top = 0.0499992
margin_right = 0.0999756
margin_bottom = -7.62939e-06
custom_colors/default_color = Color( 0.552941, 0.431373, 0.27451, 1 )
custom_fonts/normal_font = SubResource( 3 )
visible_characters = 0
percent_visible = 0.0
text = "Press E to interact with NPC. They will speak with you and sometimes award you items."

[connection signal="pressed" from="ItemSlotContainer/VBoxContainer/btn_upselection" to="." method="_on_btn_upselection_pressed"]
[connection signal="pressed" from="ItemSlotContainer/VBoxContainer/btn_downselection" to="." method="_on_btn_downselection_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
